--- a/dh_du.1
+++ b/dh_du.1
@@ -1,4 +1,4 @@
-.TH DH_DU 1
+.TH DH_DU 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_du \- generate DEBIAN/du file
 .SH SYNOPSIS
@@ -11,6 +11,6 @@ This program is now depricated, and does nothing, after a decision by the
 debian developers that du control files should not exit. It will simply
 output a warning message now.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
