--- a/dh_compress.1
+++ b/dh_compress.1
@@ -1,9 +1,9 @@
-.TH DH_COMPRESS 1
+.TH DH_COMPRESS 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_compress \- compress files and fix symlinks in package build directories
 .SH SYNOPSIS
 .B dh_compress
-.I "[-v] [-a] [-i] [-Xitem] [--no-act] [-ppackage] [-Ptmpdir]"
+.I "[debhelper options] [-Xitem]"
 .SH "DESCRIPTION"
 dh_compress is a debhelper program that is responsible for compressing
 the files in package build directories, and makes sure that any symlinks
@@ -31,24 +31,10 @@ customization of what files are compressed:
  	! -name "copyright"
 .SH OPTIONS
 .TP
-.B \-v, \--verbose
-Verbose mode; show all commands that modify the package build directory.
-.TP
-.B \-a, \--arch
-Compress files for all architecture dependent packages.
-.TP
-.B \-i, \--indep
-Compress files for all architecture independent packages.
-.TP
-.B \--no-act
-Do not really do anything. If used with -v, the result is that this command
-will output a list of what it would have done.
-.TP
-.B \-ppackage, \--package=package
-Compress files for the package named "package".
-.TP
-.B \-Ptmpdir, \--tmpdir=tmpdir
-Use "tmpdir" for package build directory. 
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
 .B \-Xitem, \--exclude=item
 Exclude files that contain "item" anywhere in their filename from being
@@ -57,27 +43,16 @@ You may use this option multiple times to build up a list of things to
 exclude. You can accomplish the same thing by using a debian/compress file,
 but this is easier.
 .SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will have their files compressed.
-.P
 The debian/compress file applies to the first binary package listed in your
 control file. For the other packages, you can make files named
 debian/package.compress, where "package" is the name of the package they 
 apply to. (This works for the first binary package too.)
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
-.TP
-.I DH_NO_ACT
-Enables no-act mode (see above).
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH BUGS
 Filenames with spaces in them may not properly be compressed.
 .SH "CONFORMS TO"
