--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -1,4 +1,4 @@
-.TH DH_INSTALLDEBFILES 1
+.TH DH_INSTALLDEBFILES 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_installdebfiles \- install files into the DEBIAN directory
 .SH SYNOPSIS
@@ -21,9 +21,13 @@ This program will be removed at some time in the furture.
 Any options passed to this program will be sent to each of the 3 programs
 listed above.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.TP
+.BR debhelper (1)
+.TP
 .BR dh_installdeb (1)
+.TP
 .BR dh_shlibdeps (1)
+.TP
 .BR dh_gencontrol (1)
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
