--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -1,9 +1,9 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_INSTALLDOCS 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_installdocs \- install documentation into package build directories
 .SH SYNOPSIS
 .B dh_installdocs
-.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Ptmpdir] [-A] [file ...]"
+.I "[debhelper options] [-A] [file ...]"
 .SH "DESCRIPTION"
 dh_installdocs is a debhelper program that is responsible for installing
 documentation into usr/doc/package in package build directories.
@@ -31,24 +31,10 @@ A file named debian/package.docs (debian/docs may be used for the first
 binary package in debian/control) can list other files to be installed.
 .SH OPTIONS
 .TP
-.B \-v, \--verbose
-Verbose mode; show all commands that modify the package build directory.
-.TP
-.B \-a, \--arch
-Install files for all architecture dependent packages.
-.TP
-.B \-i, \--indep
-Install files for all architecture independent packages.
-.TP
-.B \--no-act
-Do not really do anything. If used with -v, the result is that this command
-will output a list of what it would have done.
-.TP
-.B \-ppackage, \--package=package
-Install files for the package named "package".
-.TP
-.B \-Ptmpdir, \--tmpdir=tmpdir
-Use "tmpdir" for package build directory. 
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
 .B \-A, \--all
 Install all files specified by command line parameters in ALL packages
@@ -58,26 +44,15 @@ acted on.
 Install these files as documentation into the first package acted on. (Or in
 all packages if -A is specified).
 .SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
-.P
 Note that dh_installdocs will happily copy entire directory hierarchies if
 you ask it to (it uses cp -a internally). If it is asked to install a
 directory, it will install the complete contents of the directory.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
-.TP
-.I DH_NO_ACT
-Enables no-act mode (see above).
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH BUGS
 Filenames with spaces in them will not currently be installed.
 .SH "CONFORMS TO"
