--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -1,9 +1,9 @@
-.TH DH_INSTALLMANPAGES 1
+.TH DH_INSTALLMANPAGES 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_installmanpages \- install man pages into package build directories
 .SH SYNOPSIS
 .B dh_installmanpages
-.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Ptmpdir] [file ...]"
+.I "[debhelper options] [file ...]"
 .SH "DESCRIPTION"
 dh_installmanpages is a debhelper program that is responsible for
 automatically installing man pages into usr/man/ and usr/X11R6/man/ in
@@ -24,50 +24,25 @@ After the man page installation step, dh_installmanpages will check to see if
 any of the man pages are ".so" links. If so, it changes them to symlinks.
 .SH OPTIONS
 .TP
-.B \-v, \--verbose
-Verbose mode; show all commands that modify the package build directory.
-.TP
-.B \-a, \--arch
-Install man pages into all architecture dependent packages.
-.TP
-.B \-i, \--indep
-Install man pages into all architecture independent packages.
-.TP
-.B \--no-act
-Do not really do anything. If used with -v, the result is that this command
-will output a list of what it would have done.
-.TP
-.B \-ppackage, \--package=package
-Install man pages into the package named "package".
-.TP
-.B \-Ptmpdir, \--tmpdir=tmpdir
-Use "tmpdir" for package build directory. 
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
 .B file ...
 Do not install these files as man pages, even if they look like valid man
 pages.
 .SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
-.P
 dh_installmanpages will install the man pages it finds into
 .B all
 packages you tell it to act on, since it can't tell what package the man
 pages belong in.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
-.TP
-.I DH_NO_ACT
-Enables no-act mode (see above).
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH BUGS
 Man pages with the extension
 .B .man
