--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,18 @@
-debhelper (1.0.1) unstable; urgency=low
+debhelper (1.1.0) unstable; urgency=low
 
-  * Backported bug fixes from the 1.1 tree:
-  * dh_installdocs: used -m 655 for a TODO file. (minor, dh_fixperms cleans
-    up after it)
-  * dh_fixperms: had a problem with removing x bits on examples files
-  * dh_compress: since version 0.88 or so, dh_compress has bombed out if
-    a debian/compress file returned an error code. This was actually
-    unintentional - in fact, the debian/compress example in the man page
-    will fail this way if usr/info or usr/X11R6 is not present. Corrected
-    the program to not fail. (#26214)
+  * New unstable branch of debhelper.
+  
+  * TODO: list all current bugs, in order I plan to tackle them.
+  * Added debhelper.1 man page, which groups all the debhelper options that
+    are common to all commands in once place so I can add new options w/o
+    updating 27 man pages.
+  * dh_*.1: updated all debheper man pages to refer to debhelper(1) where
+    appropriate. Also corrected a host of little errors.
+  * doc/README: moved a lot of this file into debhelper.1.
+  * dh_*: -N option now excludes a package from the list of packages the 
+    programs act on. (#25247)
 
- -- Joey Hess <joeyh@master.debian.org>  Sun, 30 Aug 1998 22:21:26 -0700
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  8 Aug 1998 17:49:56 -0700
 
 debhelper (1.0) stable unstable; urgency=low
 
