--- a/dh_compress.1
+++ b/dh_compress.1
@@ -3,7 +3,7 @@
 dh_compress \- compress files and fix symlinks in package build directories
 .SH SYNOPSIS
 .B dh_compress
-.I "[debhelper options] [-Xitem]"
+.I "[debhelper options] [-Xitem] [-A] [file ...]"
 .SH "DESCRIPTION"
 dh_compress is a debhelper program that is responsible for compressing
 the files in package build directories, and makes sure that any symlinks
@@ -42,6 +42,13 @@ compressed. For example, -X=.jpeg will exclude jpeg's from compression.
 You may use this option multiple times to build up a list of things to
 exclude. You can accomplish the same thing by using a debian/compress file,
 but this is easier.
+.TP
+.B \-A, \--all
+Compress all files specified by command line parameters in ALL packages
+acted on.
+.TP
+.B file ...
+Add these files to the list of files to compress.
 .SH NOTES
 The debian/compress file applies to the first binary package listed in your
 control file. For the other packages, you can make files named
