--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (1.1.1) unstable; urgency=low
+
+  * dh_movefiles: try to move all files specified, and only then bomb out if
+    some of the file could not be found. Makes it easier for some packages
+    that don't always have the same files in them.
+  * dh_compress: any parameters passed to it on the command line specify
+    additional files to be compressed in the first package acted on.
+  * dh_compress: recognize standard -A parameter.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat,  8 Aug 1998 22:48:01 -0700
+
 debhelper (1.1.0) unstable; urgency=low
 
   * New unstable branch of debhelper.
