--- a/dh_clean.1
+++ b/dh_clean.1
@@ -8,7 +8,7 @@ dh_clean \- clean up package build directories
 dh_clean is a debhelper program that is responsible for cleaning up after a
 package is built. It removes the package build directories, and removes some
 other files, such as debian/substvars, debian/files, DEADJOE, emacs backup 
-files, etc.
+files, any detritus left behind by other debhelper commands, etc.
 .SH OPTIONS
 .TP
 .B debhelper options
