--- a/dh_strip.1
+++ b/dh_strip.1
@@ -3,7 +3,7 @@
 dh_strip \- strip executables, shared libraries, and some static libraries.
 .SH SYNOPSIS
 .B dh_strip
-.I "[debhelper options]"
+.I "[debhelper options] [-Xitem]"
 .SH "DESCRIPTION"
 dh_strip is a debhelper program that is responsible for stripping
 executables, shared libraries, and static libraries that are not used for
@@ -17,6 +17,11 @@ used in debugging, and will not strip them.
 See
 .BR debhelper (1)
 for a list of options common to all debhelper commands.
+.TP
+.B \-Xitem, \--exclude=item
+Exclude files that contain "item" anywhere in their filename from being
+stripped. You may use this option multiple times to build up a list of
+things to exclude.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
