--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.1.2) unstable; urgency=low
+
+  * dh_strip: added -X to specify files to not strip (#25590).
+  * Added dh_installemacsen, for automatic registration with emacsen-common
+    (#21401).
+  * Preliminary thoughts in TODO about converting entire debhelper programs
+    to perl programs.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 10 Aug 1998 13:35:17 -0700
+
 debhelper (1.1.1) unstable; urgency=low
 
   * dh_movefiles: try to move all files specified, and only then bomb out if
