--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -54,7 +54,8 @@ for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
 .BR debhelper (1)
 .SH BUGS
-Filenames with spaces in them will not currently be installed.
+It's impossible to specify filenames with spaces or other whitespace in them
+in debian/docs file. This is more a historical design flaw than a bug.
 .SH "CONFORMS TO"
 Debian policy, version 2.3.0.0
 .SH AUTHOR
