--- a/doc/TODO
+++ b/doc/TODO
@@ -11,6 +11,7 @@ Bugs:
 
 Wishlist items:
 
+* update PROGRAMMING to cover new perl interface.
 * Make dh_movefiles remove emptied directories after it's moved all the
   files out of them (#17111).
 * info support for debhelper (currently implemented, but I hate how I did it,
@@ -61,19 +62,9 @@ Depricated:
 
 Long term goals:
 
-Convert selected and then selected debhelper commands (dh_installmanpages?)
-to be perl programs, for speed, ease of maintainence, and 8-bit cleanness.
-Tricky, because of the -v option -- they'd have to call external commands
-like install and cp, and log such calls if verbose was on. Maybe something
-like:
+Convert selected debhelper commands (dh_installmanpages?) to be perl
+programs, for speed, ease of maintainence, and 8-bit cleanness.
 
-doit {
-	system @_;
-	if ($DH_VERBOSE) {
-		print join " ", @_;
-	}
-}
+Fixes to backport to 1.0 tree:
 
-However, this will output commands that are incorrect if the filenames in
-them contain spaces or other weird characters. Hmm, maybe such things should
-just be escaped with \'s in the output?
+* dh_installdocs used -m 655 for a TODO file.
