--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -26,7 +26,7 @@ See
 for a list of options common to all debhelper commands.
 .TP
 .B upstream
-Instal this file as the upstream changelog.
+Install this file as the upstream changelog.
 .SH NOTES
 It is an error to specify an upstream changelog file for a debian native
 package.
