--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -16,7 +16,7 @@ programs, and you may replace any calls to this program by:
   dh_shlibdeps
   dh_gencontrol
 .SH WARNING
-This program will be removed at some time in the furture.
+This program will be removed at some time in the future.
 .SH OPTIONS
 Any options passed to this program will be sent to each of the 3 programs
 listed above.
