--- a/dh_installdirs.1
+++ b/dh_installdirs.1
@@ -40,6 +40,7 @@ for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
 .BR debhelper (1)
 .SH BUGS
-Directories with spaces in them will not currently be installed properly.
+It's impossible to specify filenames with spaces or other whitespace in them
+in debian/dirs file. This is more a historical design flaw than a bug.
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
