--- a/doc/TODO
+++ b/doc/TODO
@@ -9,7 +9,6 @@ Bugs:
 
 Wishlist items:
 
-* update PROGRAMMING to cover new perl interface.
 * Make dh_movefiles remove emptied directories after it's moved all the
   files out of them (#17111).
 * info support for debhelper (currently implemented, but I hate how I did it,
@@ -50,7 +49,8 @@ Wishlist items:
   they are stating that they don't do anything later to invalidate the cache,
   without calling ch_cache again. (#23792)
 * Add a switch to dh_installdeb to allow it to do user definied
-  substitutions. (#25235)
+  substitutions. TOH, maybe it's better if peopld just sed
+  postinst.in before debhelper gets it's hands on it... (#25235)
 
 Depricated:
 
